--- a/src/locale/messages.ar.json
+++ b/src/locale/messages.ar.json
@@ -504,5 +504,74 @@
     "seo.home.title": "بريد إلكتروني مؤقت مجاني وصندوق بريد يمكن التخلص منه | TempMail4u",
     "seo.home.description": "أنشئ بريداً مؤقتاً مجاناً خلال ثوانٍ. احصل على صندوق بريد مؤقت يحافظ على خصوصية عنوانك الحقيقي ويحميك من الرسائل المزعجة. بدون تسجيل. جرّب TempMail4u الآن!",
     "seo.home.keywords": "بريد مؤقت، temp mail، بريد يمكن التخلص منه، بريد حارق، بريد مجهول، بريد وهمي، حماية من البريد العشوائي، التحقق من البريد، بريد خصوصية، صندوق بريد مؤقت"
+  
+  , "seo.breadcrumbs.home": "الصفحة الرئيسية"
+  , "seo.email10min.titleShort": "بريد مؤقت لمدة 10 دقائق"
+  , "seo.email20min.titleShort": "بريد مؤقت لمدة 20 دقيقة"
+  , "seo.email30min.titleShort": "بريد مؤقت لمدة 30 دقيقة"
+  , "seo.home.faq.q1": "ما هو البريد المؤقت؟"
+  , "seo.home.faq.a1": "البريد المؤقت (صندوق بريد مؤقت/عنوان مؤقت) صندوق قصير المدة للاشتراك واستلام الأكواد وحماية بريدك من الرسائل المزعجة."
+  , "seo.home.faq.q2": "كيف أنشئ بريداً مؤقتاً؟"
+  , "seo.home.faq.a2": "لا حاجة للتسجيل. افتح هذه الصفحة وسينشأ صندوقك المجهول فوراً. يمكنك التحديث لإنشاء صندوق جديد أو اختيار اسم مستخدم قبل رمز @."
+  , "seo.home.faq.q3": "ما مدة الصندوق المؤقت؟"
+  , "seo.home.faq.a3": "افتراضياً تبقى الرسائل 24 ساعة في المتصفح. إذا حفظت الجلسة يبقى الصندوق 7 أيام. كما نوفر 10/20/30 دقيقة."
+  , "seo.home.faq.q4": "هل استخدامه آمن؟"
+  , "seo.home.faq.a4": "نعم. يتم تخزين البيانات محلياً في المتصفح. لا نتتبع أو نسجل استخدامك."
+  , "seo.home.faq.q5": "فيما يُستخدم البريد الوهمي؟"
+  , "seo.home.faq.a5": "مثالي للتسجيلات الجديدة، اختبار التطبيقات، التسوق والتحميلات، وأي مكان لا تريد مشاركة بريدك الحقيقي فيه."
+  , "seo.home.faq.q6": "هل أستطيع إرسال رسائل؟"
+  , "seo.home.faq.a6": "لا. الاستلام فقط. مخصص للتسجيلات والتحقق والاستخدام المؤقت."
+  , "seo.home.faq.q7": "ما الفرق عن البريد العادي؟"
+  , "seo.home.faq.a7": "البريد العادي دائم ويتطلب معلومات شخصية. البريد المؤقت مجهول، بلا تسجيل، وينتهي تلقائياً."
+  , "seo.home.faq.q8": "هل أستطيع تمديد المدة؟"
+  , "seo.home.faq.a8": "نعم، بحفظ الجلسة أو رابط الوصول الفريد يمكنك العودة خلال 7 أيام."
+  , "seo.home.faq.q9": "هل توجد مدة 10 دقائق؟"
+  , "seo.home.faq.a9": "نعم. نوفر 10 و20 و30 دقيقة للاستخدام السريع والمؤقت."
+  , "seo.home.faq.q10": "لماذا أستخدم بريداً خاصاً؟"
+  , "seo.home.faq.a10": "لحماية الخصوصية وتجنب الرسائل المزعجة والحفاظ على نظافة بريدك وتقليل تسرب البيانات."
+  , "seo.email10min.faq.q1": "ما هو بريد 10 دقائق؟"
+  , "seo.email10min.faq.a1": "صندوق يُحذف تلقائياً بعد 600 ثانية؛ مثالي للأكواد والروابط دون كشف بريدك الحقيقي."
+  , "seo.email10min.faq.q2": "للتسجيل وOTP؟"
+  , "seo.email10min.faq.a2": "نعم. استخدم الصندوق المؤقت للتسجيل السريع والرموز والتحميلات؛ استلام فقط ومن دون تسجيل."
+  , "seo.email10min.faq.q3": "إعادة الضبط أو التمديد؟"
+  , "seo.email10min.faq.a3": "استخدم إعادة الضبط لبدء المؤقت من جديد أو اختر 20/30 دقيقة."
+  , "seo.email10min.faq.q4": "لم يصل OTP؟"
+  , "seo.email10min.faq.a4": "قد تؤخر بعض الخدمات الرسائل أو تحجب النطاقات المؤقتة. حدّث الصفحة أو اطلب رمزاً جديداً أو استخدم مدة أطول."
+  , "seo.email10min.faq.q5": "للحسابات الحساسة؟"
+  , "seo.email10min.faq.a5": "غير مُستحسن. استخدم بريداً دائماً للبنوك والحسابات الشخصية."
+  , "seo.email10min.faq.q6": "هل هو خاص ومجهول؟"
+  , "seo.email10min.faq.a6": "نعم. لا يتطلب تسجيلاً؛ HTTPS؛ حذف عند الانتهاء."
+  , "seo.email10min.faq.q7": "كم صندوقاً أستطيع إنشاءه؟"
+  , "seo.email10min.faq.a7": "غير محدود. يمكنك إنشاء ما تحتاجه؛ كل صندوق ينتهي تلقائياً."
+  , "seo.email10min.faq.q8": "هل يعمل على الجوال؟"
+  , "seo.email10min.faq.a8": "نعم، يعمل على جميع الأجهزة."
+  , "seo.email10min.faq.q9": "استخدام بسيط 10 دقائق فقط؟"
+  , "seo.email10min.faq.a9": "نعم. بريد بسيط لمدة 10 دقائق ينتهي تلقائياً."
+  , "seo.email20min.faq.q1": "ما هو بريد 20 دقيقة؟"
+  , "seo.email20min.faq.a1": "عنوان مؤقت يبقى نشطاً لمدة 20 دقيقة لاستلام الرسائل دون استخدام بريدك الشخصي."
+  , "seo.email20min.faq.q2": "هل هو مجاني؟"
+  , "seo.email20min.faq.a2": "نعم، مجاني 100% وبدون تسجيل."
+  , "seo.email20min.faq.q3": "OTP والتحقق؟"
+  , "seo.email20min.faq.a3": "نعم، تستلم كلمات المرور لمرة واحدة وروابط التفعيل بأمان."
+  , "seo.email20min.faq.q4": "هل يُحذف تلقائياً؟"
+  , "seo.email20min.faq.a4": "نعم، تُحذف الرسائل والصندوق بعد 20 دقيقة."
+  , "seo.email20min.faq.q5": "هل هويتي محمية؟"
+  , "seo.email20min.faq.a5": "بالتأكيد. لا نتتبع أو نخزن بيانات شخصية."
+  , "seo.email30min.faq.q1": "ما هو بريد 30 دقيقة؟"
+  , "seo.email30min.faq.a1": "صندوق مؤقت ممتد لمدة 30 دقيقة."
+  , "seo.email30min.faq.q2": "هل هو مجاني؟"
+  , "seo.email30min.faq.a2": "نعم، مجاني تماماً بدون تسجيل."
+  , "seo.email30min.faq.q3": "استلام OTP والتحقق؟"
+  , "seo.email30min.faq.a3": "نعم، تستلم OTP وروابط التفعيل بأمان."
+  , "seo.email30min.faq.q4": "ماذا يحدث بعد 30 دقيقة؟"
+  , "seo.email30min.faq.a4": "يُحذف العنوان وجميع الرسائل نهائياً."
+  , "seo.email30min.faq.q5": "هل أستطيع تمديد المؤقت؟"
+  , "seo.email30min.faq.a5": "نعم، انقر إعادة الضبط للحصول على 30 دقيقة إضافية."
+  , "seo.email30min.faq.q6": "هل خصوصيتي محفوظة؟"
+  , "seo.email30min.faq.a6": "نعم، لا تتبع ولا تخزين للبيانات الشخصية."
+  , "seo.email30min.faq.q7": "كم رسالة أستطيع استقبالها؟"
+  , "seo.email30min.faq.a7": "لا يوجد حد أثناء فترة 30 دقيقة."
+  , "breadcrumbs.home": "الصفحة الرئيسية"
+  , "privacyPolicy.title": "سياسة الخصوصية"
   }
 }
