--- a/src/locale/messages.fr.json
+++ b/src/locale/messages.fr.json
@@ -490,5 +490,74 @@
     "seo.terms.title": "Conditions générales – TempMail4U | Email temporaire & temp mail",
     "seo.terms.description": "Lisez les Conditions générales d’utilisation des services TempMail4U, notamment mail à usage unique, email temporaire, temp mail et boîtes jetables.",
     "seo.terms.keywords": "conditions générales, CGU temp mail, politique email temporaire, règles mail à usage unique, conditions boîte jetable"
+  
+  , "seo.breadcrumbs.home": "Accueil"
+  , "seo.email10min.titleShort": "Générateur d'e-mail temporaire 10 minutes"
+  , "seo.email20min.titleShort": "E-mail temporaire 20 minutes - Boîte jetable"
+  , "seo.email30min.titleShort": "E-mail temporaire 30 minutes - Boîte jetable"
+  , "seo.home.faq.q1": "Qu'est-ce qu'un e-mail temporaire ?"
+  , "seo.home.faq.a1": "Un e-mail temporaire (aussi appelé boîte jetable, adresse jetable ou burner) est une boîte de courte durée pour s'inscrire, recevoir des codes et protéger votre boîte principale du spam."
+  , "seo.home.faq.q2": "Comment créer un e-mail jetable ?"
+  , "seo.home.faq.a2": "Aucune inscription. Ouvrez simplement cette page et votre boîte anonyme est créée instantanément. Vous pouvez rafraîchir pour en générer une nouvelle ou choisir un nom d'utilisateur avant le symbole @."
+  , "seo.home.faq.q3": "Combien de temps dure une boîte temporaire ?"
+  , "seo.home.faq.a3": "Par défaut, les e-mails restent 24 h dans votre navigateur. Si vous enregistrez, la boîte reste active 7 jours. Nous proposons aussi 10, 20 et 30 minutes."
+  , "seo.home.faq.q4": "Est-ce sûr d'utiliser une boîte jetable ?"
+  , "seo.home.faq.a4": "Oui. Toutes les données sont stockées localement dans votre navigateur. Nous ne suivons ni ne traçons votre usage."
+  , "seo.home.faq.q5": "À quoi sert un faux e-mail ?"
+  , "seo.home.faq.a5": "Idéal pour nouvelles inscriptions, tests d'apps, achats en ligne, téléchargements, ou partout où vous ne voulez pas partager votre e-mail personnel."
+  , "seo.home.faq.q6": "Puis-je envoyer des e-mails ?"
+  , "seo.home.faq.a6": "Non. Réception uniquement. Conçu pour inscriptions, vérifications et usage ponctuel."
+  , "seo.home.faq.q7": "Quelle différence avec un e-mail classique ?"
+  , "seo.home.faq.a7": "Les e-mails classiques demandent des infos personnelles et restent permanents. Les boîtes temporaires sont anonymes, sans inscription et expirent automatiquement."
+  , "seo.home.faq.q8": "Puis-je prolonger la durée ?"
+  , "seo.home.faq.a8": "Oui. En enregistrant la session ou le lien d'accès unique, vous pouvez revenir pendant 7 jours."
+  , "seo.home.faq.q9": "Existe-t-il l'option 10 minutes ?"
+  , "seo.home.faq.a9": "Oui. Nous proposons des boîtes 10, 20 et 30 minutes pour un usage rapide et jetable."
+  , "seo.home.faq.q10": "Pourquoi utiliser une boîte privée ?"
+  , "seo.home.faq.a10": "Pour protéger votre vie privée, éviter le spam, garder votre boîte principale propre et réduire les risques de fuite de données."
+  , "seo.email10min.faq.q1": "Qu'est-ce qu'un e-mail 10 minutes ?"
+  , "seo.email10min.faq.a1": "Une boîte de 10 minutes se supprime automatiquement après 600 secondes, idéale pour codes et liens sans exposer votre e-mail principal."
+  , "seo.email10min.faq.q2": "Pour inscriptions et OTP ?"
+  , "seo.email10min.faq.a2": "Oui. Utilisez la boîte jetable pour les inscriptions rapides, OTP et téléchargements ; réception uniquement, sans inscription."
+  , "seo.email10min.faq.q3": "Puis-je réinitialiser ou prolonger ?"
+  , "seo.email10min.faq.a3": "Utilisez Réinitialiser pour relancer le minuteur, ou passez à 20/30 minutes."
+  , "seo.email10min.faq.q4": "Je n'ai pas reçu mon OTP ?"
+  , "seo.email10min.faq.a4": "Certains services retardent ou bloquent les domaines temporaires. Rafraîchissez, demandez un nouveau code ou essayez une durée plus longue."
+  , "seo.email10min.faq.q5": "Pour des comptes sensibles ?"
+  , "seo.email10min.faq.a5": "Non recommandé. Utilisez un e-mail permanent pour banque, administration ou comptes personnels."
+  , "seo.email10min.faq.q6": "Est-ce anonyme et privé ?"
+  , "seo.email10min.faq.a6": "Oui. Aucune inscription requise ; HTTPS ; suppression à l'expiration."
+  , "seo.email10min.faq.q7": "Combien de boîtes puis-je créer ?"
+  , "seo.email10min.faq.a7": "Illimité. Créez autant de boîtes temporaires que nécessaire ; chacune expire automatiquement."
+  , "seo.email10min.faq.q8": "Fonctionne sur mobile ?"
+  , "seo.email10min.faq.a8": "Oui. Le générateur est réactif et fonctionne sur tous les appareils."
+  , "seo.email10min.faq.q9": "Puis-je utiliser une simple boîte 10 minutes ?"
+  , "seo.email10min.faq.a9": "Oui. Une boîte simple 10 minutes offre une adresse jetable rapide qui expire automatiquement."
+  , "seo.email20min.faq.q1": "Qu'est-ce qu'un e-mail 20 minutes ?"
+  , "seo.email20min.faq.a1": "Une adresse jetable active pendant 20 minutes. Recevez des messages sans utiliser votre boîte personnelle."
+  , "seo.email20min.faq.q2": "Est-ce vraiment gratuit ?"
+  , "seo.email20min.faq.a2": "Oui, 100% gratuit, sans inscription ni paiement."
+  , "seo.email20min.faq.q3": "OTP et vérifications ?"
+  , "seo.email20min.faq.a3": "Oui. Recevez OTP, liens d'activation et autres e-mails de vérification."
+  , "seo.email20min.faq.q4": "Suppression automatique ?"
+  , "seo.email20min.faq.a4": "Oui. La boîte et les e-mails sont supprimés après 20 minutes."
+  , "seo.email20min.faq.q5": "Mon identité est-elle protégée ?"
+  , "seo.email20min.faq.a5": "Absolument. Aucune donnée personnelle suivie ou stockée. Votre confidentialité est prioritaire."
+  , "seo.email30min.faq.q1": "Qu'est-ce qu'un e-mail 30 minutes ?"
+  , "seo.email30min.faq.a1": "Une boîte jetable étendue active pendant 30 minutes."
+  , "seo.email30min.faq.q2": "Est-ce gratuit ?"
+  , "seo.email30min.faq.a2": "Oui, totalement gratuit sans inscription."
+  , "seo.email30min.faq.q3": "Recevoir OTP et vérifications ?"
+  , "seo.email30min.faq.a3": "Oui, recevez OTP, liens d'activation et autres e-mails de vérification en toute sécurité."
+  , "seo.email30min.faq.q4": "Que se passe-t-il après 30 minutes ?"
+  , "seo.email30min.faq.a4": "Adresse et messages supprimés définitivement. Aucune donnée conservée."
+  , "seo.email30min.faq.q5": "Prolonger le minuteur ?"
+  , "seo.email30min.faq.a5": "Oui, cliquez sur Réinitialiser pour 30 minutes supplémentaires."
+  , "seo.email30min.faq.q6": "Ma confidentialité est-elle protégée ?"
+  , "seo.email30min.faq.a6": "Oui. Aucun suivi, stockage ou journalisation de données personnelles."
+  , "seo.email30min.faq.q7": "Combien d'e-mails puis-je recevoir ?"
+  , "seo.email30min.faq.a7": "Aucune limite pendant la fenêtre de 30 minutes."
+  , "breadcrumbs.home": "Accueil"
+  , "privacyPolicy.title": "Politique de confidentialité"
   }
 }
