--- a/src/locale/messages.json
+++ b/src/locale/messages.json
@@ -96,6 +96,7 @@
     "about.join.title": " Join Our Growing Community ",
     "about.join.para": " Over {$START_TAG_STRONG}500,000+ people{$CLOSE_TAG_STRONG} have already used TempMail4U to keep their email safe. Whether you’re a student, developer, freelancer, or just someone who values privacy — this service is built for you. ",
     "about.join.button": " Get Your Free Temp Mail Now ",
+    "breadcrumbs.home": "Home",
     "seo.about.title": "About TempMail4u - Privacy First Temporary Email Service",
     "seo.about.description": "Learn how TempMail4u helps you stay private online with disposable inboxes, instant setup, and spam control.",
     "seo.about.keywords": "about tempmail, temp mail info, disposable email service, privacy email, spam control",
@@ -160,31 +161,51 @@
     "email10min.links.30min.label": "{$START_LINK}30 minute temporary email{$CLOSE_LINK}",
     "email10min.links.saved.label": "{$START_LINK}7-day saved inbox{$CLOSE_LINK}",
     "email10min.faq.title.label": " Frequently Asked Questions ",
-    "email10min.faq.q1.label": " What is a 10 minute temporary email? ",
+    "email10min.faq.q1.label": "What is a 10 minute temporary email?",
     "email10min.faq.a1.label": " It’s a {$START_TAG_STRONG}self-destructing inbox{$CLOSE_TAG_STRONG} that lasts for 600 seconds. Perfect for OTPs, verifications, and avoiding spam. ",
-    "email10min.faq.q2.label": " Is this service free? ",
+    "email10min.faq.q2.label": "Is this service free?",
     "email10min.faq.a2.label": " Yes. Our {$START_TAG_STRONG}temporary email generator{$CLOSE_TAG_STRONG} is 100% free with no subscriptions or hidden fees. ",
-    "email10min.faq.q3.label": " Can I reset or extend the inbox? ",
+    "email10min.faq.q3.label": "Can I reset or extend the inbox?",
     "email10min.faq.a3.label": " Yes. Use Reset to restart the timer, or switch to a 20 or 30 minute inbox for longer use. ",
-    "email10min.faq.q4.label": " Why didn’t I receive my OTP or verification? ",
+    "email10min.faq.q4.label": "Why didn’t I receive my OTP or verification?",
     "email10min.faq.a4.label": " Some services delay emails or block temporary domains. Refresh your inbox, request a new code, or choose a longer option. ",
-    "email10min.faq.q5.label": " Can I use it for sensitive accounts? ",
+    "email10min.faq.q5.label": "Can I use it for sensitive accounts?",
     "email10min.faq.a5.label": " Not recommended. For banking, government, or personal logins, always use a permanent email. A {$START_TAG_STRONG}disposable inbox{$CLOSE_TAG_STRONG} is best for short-term or low-risk use. ",
-    "email10min.faq.q6.label": " Is it anonymous and private? ",
+    "email10min.faq.q6.label": "Is it anonymous and private?",
     "email10min.faq.a6.label": " Yes. Our {$START_TAG_STRONG}10 minute mail{$CLOSE_TAG_STRONG} service does not require registration. Messages are deleted at expiry, and all connections use HTTPS. ",
-    "email10min.faq.q7.label": " How many inboxes can I create? ",
+    "email10min.faq.q7.label": "How many inboxes can I create?",
     "email10min.faq.a7.label": " Unlimited. Generate as many {$START_TAG_STRONG}temporary inboxes{$CLOSE_TAG_STRONG} as you need. Each expires automatically. ",
-    "email10min.faq.q8.label": " Does it work on mobile devices? ",
+    "email10min.faq.q8.label": "Does it work on mobile devices?",
     "email10min.faq.a8.label": " Yes. The {$START_TAG_STRONG}temporary email generator{$CLOSE_TAG_STRONG} is responsive and works on all devices. ",
-    "email10min.faq.q9.label": " Can I just use a 10 minute email without extras? ",
+    "email10min.faq.q9.label": "Can I just use a 10 minute email without extras?",
     "email10min.faq.a9.label": " Yes. A simple {$START_TAG_STRONG}10 minute email{$CLOSE_TAG_STRONG} provides a fast, disposable inbox that expires automatically. ",
     "email10min.cta.title.label": " Start Now ",
     "email10min.cta.subtitle.label": " Generate your free {$START_TAG_STRONG}10 minute temporary email{$CLOSE_TAG_STRONG} instantly. Join thousands of users who trust TempMail4U for fast, anonymous, and secure {$START_TAG_STRONG}disposable inboxes{$CLOSE_TAG_STRONG}. Our {$START_TAG_STRONG}temporary email service{$CLOSE_TAG_STRONG} is designed to protect your privacy and simplify your online activity. ",
     "email10min.cta.button.label": " Generate 10 minute email ",
     "email10min.cta.note.label": " Free • Anonymous • Secure • Receive only ",
-    "seo.email10min.title": "10-Minute Temporary Email - Free Disposable Inbox | TempMail4u",
-    "seo.email10min.description": "Get a free 10-minute disposable email for instant verifications. No signup needed. Protect your privacy with our temporary self-destructing inbox.",
-    "seo.email10min.keywords": "10 minute email, disposable email, temporary inbox, burner email, email verification, OTP email, privacy protection, spam prevention, anonymous email, quick email",
+    "seo.breadcrumbs.home": "Home",
+    "seo.email10min.titleShort": "10 Minute Temporary Email Generator",
+    "seo.email10min.title": "10 Minute Temporary Email | Free, Secure & Spam-Free Inbox",
+    "seo.email10min.description": "Generate your free 10 minute temporary email instantly. Protect your inbox with our secure disposable inbox service – fast, private, and spam-free.",
+    "seo.email10min.keywords": "10 minute temporary email, 10 minute mail, disposable email, burner email, temporary mailbox, anonymous inbox, spam free email, OTP verification",
+    "seo.email10min.faq.q1": "What is a 10 minute email?",
+    "seo.email10min.faq.a1": "A 10 minute email is a short-lived inbox that deletes itself after 600 seconds, ideal for receiving codes and links without exposing your main account.",
+    "seo.email10min.faq.q2": "Can I use it for sign-ups and OTP?",
+    "seo.email10min.faq.a2": "Yes. Use the disposable inbox for quick registrations, OTPs, and downloads; it's receive-only and requires no signup.",
+    "seo.email10min.faq.q3": "Can I reset or extend the inbox?",
+    "seo.email10min.faq.a3": "Use Reset to restart the timer, or switch to a 20 or 30 minute inbox for longer use.",
+    "seo.email10min.faq.q4": "Why didn't I receive my OTP or verification?",
+    "seo.email10min.faq.a4": "Some services delay or block temp domains. Refresh, request a new code, or try a longer duration.",
+    "seo.email10min.faq.q5": "Can I use it for sensitive accounts?",
+    "seo.email10min.faq.a5": "Not recommended. Use permanent email for banking, government, or personal accounts.",
+    "seo.email10min.faq.q6": "Is it anonymous and private?",
+    "seo.email10min.faq.a6": "Yes. No registration required; HTTPS is used and emails are deleted at expiry.",
+    "seo.email10min.faq.q7": "How many inboxes can I create?",
+    "seo.email10min.faq.a7": "Unlimited. Create as many temporary inboxes as you need; each expires automatically.",
+    "seo.email10min.faq.q8": "Does it work on mobile devices?",
+    "seo.email10min.faq.a8": "Yes. The generator is responsive and works across devices.",
+    "seo.email10min.faq.q9": "Can I just use a 10 minute email without extras?",
+    "seo.email10min.faq.a9": "Yes. A simple 10 minute inbox provides a fast, disposable address that expires automatically.",
     "email20min.title": " 20-Minute Temporary Email – free Disposable Inbox ",
     "email20min.subtitle": " Instantly generate a {$START_TAG_STRONG}20-minute temporary email address{$CLOSE_TAG_STRONG}, ideal for sign-ups, OTPs, and multi-step verifications that take a bit more time. No registration, no spam, just a secure and private inbox that works when you need it. ",
     "email20min.faqTitle": " 20-Minute Temporary Email – FAQs ",
@@ -198,9 +219,20 @@
     "email20min.faq4Answer": " Yes. All emails and the inbox itself are automatically deleted after 20 minutes. ",
     "email20min.faq5Question": "Is my identity protected?",
     "email20min.faq5Answer": " Absolutely. We do not track or store any personal information. Your privacy is our priority. ",
+    "seo.email20min.titleShort": "20-Minute Temporary Email – Free Disposable Inbox",
     "seo.email20min.title": "20-Minute Temporary Email - Free Disposable Inbox | TempMail4u",
     "seo.email20min.description": "Get a free 20-minute temporary email address. No registration, no spam, just a secure disposable inbox for sign-ups, verifications, and one-time messages.",
     "seo.email20min.keywords": "20 minute email, temporary email, disposable inbox, temp mail, burner email, secure temp email, free email for verification, 20 min email",
+    "seo.email20min.faq.q1": "What is a 20-minute temporary email?",
+    "seo.email20min.faq.a1": "It's a disposable email address that stays active for 20 minutes. Use it to receive messages without using your personal inbox.",
+    "seo.email20min.faq.q2": "Is it really free?",
+    "seo.email20min.faq.a2": "Yes, it's 100% free to use. No registration or payment needed.",
+    "seo.email20min.faq.q3": "Can I use it to receive OTPs and verification emails?",
+    "seo.email20min.faq.a3": "Yes. You can receive one-time passwords, activation links, and other verification emails safely.",
+    "seo.email20min.faq.q4": "Will the email address delete itself?",
+    "seo.email20min.faq.a4": "Yes. All emails and the inbox itself are automatically deleted after 20 minutes.",
+    "seo.email20min.faq.q5": "Is my identity protected?",
+    "seo.email20min.faq.a5": "Absolutely. We do not track or store any personal information. Your privacy is our priority.",
     "email30min.title": " 30-Minute Temporary Email – Free Disposable Inbox ",
     "email30min.subtitle": " Get a {$START_TAG_STRONG}30-minute temporary email address{$CLOSE_TAG_STRONG} for longer processes like account setups, multi-step verifications, and extended communications. Perfect when you need more time than standard temporary emails offer. ",
     "email30min.whatIsTitle": "What is a 30-Minute Temporary Email?",
@@ -247,9 +279,24 @@
     "email30min.faq6Answer": "Completely. We don't track, store, or log any personal information. Your anonymity is guaranteed.",
     "email30min.faq7Question": "How many emails can I receive?",
     "email30min.faq7Answer": "There's no limit on the number of emails you can receive within the 30-minute window.",
+    "seo.email30min.titleShort": "30-Minute Temporary Email – Free Disposable Inbox",
     "seo.email30min.title": "30-Minute Temporary Email - Free Disposable Inbox | TempMail4u",
     "seo.email30min.description": "Free 30-minute temp mail for secure sign-ups, multi-step verification, and business use. Instant access, no signup needed.",
     "seo.email30min.keywords": "30 minute email, extended temporary email, disposable inbox, temp mail, burner email, business email verification, long term temp email, 30 min email",
+    "seo.email30min.faq.q1": "What is a 30-minute temporary email?",
+    "seo.email30min.faq.a1": "A 30-minute temporary email is an extended disposable inbox that remains active for half an hour.",
+    "seo.email30min.faq.q2": "Is it free to use?",
+    "seo.email30min.faq.a2": "Yes, it's completely free with no registration required.",
+    "seo.email30min.faq.q3": "Can I receive OTP and verification emails?",
+    "seo.email30min.faq.a3": "Yes, you can receive OTPs, activation links, and other verification emails safely.",
+    "seo.email30min.faq.q4": "What happens after 30 minutes?",
+    "seo.email30min.faq.a4": "The email address and all received messages are permanently deleted. No data is retained or recoverable.",
+    "seo.email30min.faq.q5": "Can I extend the 30-minute timer?",
+    "seo.email30min.faq.a5": "Yes, click Reset to get another full 30 minutes.",
+    "seo.email30min.faq.q6": "Is my privacy protected?",
+    "seo.email30min.faq.a6": "We don't track, store, or log any personal information.",
+    "seo.email30min.faq.q7": "How many emails can I receive?",
+    "seo.email30min.faq.a7": "There's no limit within the 30-minute window.",
     "home.section.hero.title.label": " Free Temporary Email Service ",
     "home.section.hero.subtitle.label": " Instantly create a {$START_TAG_STRONG}temporary email{$CLOSE_TAG_STRONG} with {$START_TAG_STRONG}TempMail4U{$CLOSE_TAG_STRONG}. Get a {$START_EMPHASISED_TEXT}disposable email address{$CLOSE_EMPHASISED_TEXT} that protects your privacy, no signup, no spam, no risk. Use it for quick website registrations, app testing, downloads, or anytime you need a secure {$START_EMPHASISED_TEXT}burner email{$CLOSE_EMPHASISED_TEXT} to keep your real inbox clean. ",
     "home.section.what.title.label": " What is a Temporary Email? ",
@@ -382,6 +429,26 @@
     "seo.home.description": "Create a free temp email in seconds. Get a disposable inbox to keep your real address private and spam-free. No sign up required. Try TempMail4u now!",
     "seo.home.keywords": "temporary email, temp mail, disposable email, burner email, anonymous email, fake email, spam protection, email verification, privacy email, temporary mailbox",
     "seo.home.siteName": "TempMail4u",
+    "seo.home.faq.q1": "What is a temporary email?",
+    "seo.home.faq.a1": "A temporary email (also called a one-time inbox, disposable mailbox, or burner address) is a short-lived account you can use to sign up on websites, receive verification codes, or keep your real inbox safe from spam.",
+    "seo.home.faq.q2": "How do I create a disposable email?",
+    "seo.home.faq.a2": "You don't need to register. Simply open this page and your anonymous inbox is generated instantly. You can refresh for a new one or choose a custom username before the @ symbol.",
+    "seo.home.faq.q3": "How long does a temporary inbox last?",
+    "seo.home.faq.a3": "By default, emails stay for 24 hours in your browser. If you click save, your inbox can remain active for 7 days. We also offer 10 minute mail, 20 minute mail, and 30 minute mail options.",
+    "seo.home.faq.q4": "Is a disposable inbox safe to use?",
+    "seo.home.faq.a4": "Yes. All data is stored locally in your browser session. We don't log or track your usage. This makes temporary addresses secure, private, and spam-free.",
+    "seo.home.faq.q5": "What can I use a fake email for?",
+    "seo.home.faq.a5": "These short-term addresses are best for signing up on new websites, app testing, online shopping, downloading files, or anywhere you don't want to share your personal email. They help keep your main inbox clean.",
+    "seo.home.faq.q6": "Can I send emails from this address?",
+    "seo.home.faq.a6": "No. These inboxes are receive-only. They are designed for registrations, verifications, and quick one-time use, not for sending or long-term communication.",
+    "seo.home.faq.q7": "What's the difference between temp mail and regular email?",
+    "seo.home.faq.a7": "Regular emails (like Gmail, Yahoo, Outlook) require personal info, stay permanent, and often get spam. Temporary inboxes are anonymous, require no signup, and automatically expire.",
+    "seo.home.faq.q8": "Can I extend the life of my inbox?",
+    "seo.home.faq.a8": "Yes. By saving the session or copying your unique access link, you can return anytime within 7 days. After that, the inbox is deleted permanently.",
+    "seo.home.faq.q9": "Is there a 10 minute mail option?",
+    "seo.home.faq.a9": "Yes. We provide 10 minute temp mail as well as 20 minute and 30 minute variants for quick and disposable use. These are perfect for short sign-ups or one-time verification codes.",
+    "seo.home.faq.q10": "Why should I use a private inbox instead of my real one?",
+    "seo.home.faq.a10": "Using a temporary address protects your privacy, avoids spam, keeps your main inbox clean, and reduces the risk of your personal data being leaked or sold.",
     "privacy.title": "Privacy Policy",
     "privacy.lastUpdated": "Last updated: December 2024",
     "privacy.introduction.title": "1. Introduction",
@@ -438,6 +505,7 @@
     "privacy.contact.intro": " If you have any questions about this Privacy Policy or our privacy practices, please contact us at: ",
     "privacy.contact.email": "{$START_TAG_STRONG}Email:{$CLOSE_TAG_STRONG} {$INTERPOLATION}",
     "privacy.contact.website": "{$START_TAG_STRONG}Website:{$CLOSE_TAG_STRONG}{$START_LINK}http://tempmail4u.com{$CLOSE_LINK}",
+    "privacyPolicy.title": "Privacy Policy",
     "savedEmail.verifying.title": "Verifying Access Link...",
     "savedEmail.verifying.subtitle": "Please wait while we verify your saved email.",
     "savedEmail.success.title": "Access Verified!",
